config and plugins

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,6 +3,9 @@
     "redhat.vscode-yaml",
     "eamodio.gitlens",
     "me-dutour-mathieu.vscode-github-actions",
-    "github.vscode-github-actions"
+    "github.vscode-github-actions",
+    "webben.browserslist",
+    "editorconfig.editorconfig",
+    "pkief.material-icon-theme"
   ]
 }
