--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -20,3 +20,9 @@ jobs:
 
             - name: Restore Dependencies
               run: npm ci
+
+            - name: Lint
+              run: npm run lint
+
+            - name: Unit Tests
+              run: npm run test:unit
