--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -24,5 +24,8 @@ jobs:
             - name: Lint
               run: npm run lint
 
+            - name: Lint Styles
+              run: npm run lint:styles
+
             - name: Unit Tests
               run: npm run test:unit
