--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
+    "format": "prettier . --write",
     "lint": "eslint . --fix --max-warnings 0",
     "lint:spelling": "npx cspell ./src/**",
     "lint:styles": "npx stylelint **/*.scss",
@@ -30,10 +31,13 @@
     "@vitest/coverage-v8": "^2.1.3",
     "cspell": "^8.15.4",
     "eslint": "^9.11.1",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.12",
     "globals": "^15.9.0",
     "jsdom": "^25.0.1",
+    "prettier": "^3.3.3",
     "stylelint": "^16.10.0",
     "stylelint-config-standard-scss": "^13.1.0",
     "typescript": "^5.5.3",
