--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "lint:spelling": "npx cspell ./src/**",
     "lint:styles": "npx stylelint **/*.scss",
     "preview": "vite preview",
-    "test:unit": "vitest"
+    "test:unit": "vitest",
+    "prepare": "husky"
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
@@ -38,6 +39,7 @@
     "globals": "^15.9.0",
     "jsdom": "^25.0.1",
     "prettier": "^3.3.3",
+    "pretty-quick": "^4.0.0",
     "stylelint": "^16.10.0",
     "stylelint-config-standard-scss": "^13.1.0",
     "typescript": "^5.5.3",
