--- a/package.json
+++ b/package.json
@@ -31,11 +31,12 @@
     "@vitejs/plugin-react-swc": "^3.5.0",
     "@vitest/coverage-v8": "^2.1.3",
     "cspell": "^8.15.4",
-    "eslint": "^9.11.1",
+    "eslint": "^9.13.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.12",
+    "eslint-plugin-unicorn": "^56.0.0",
     "globals": "^15.9.0",
     "jsdom": "^25.0.1",
     "prettier": "^3.3.3",
